# chaos-project

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  export.py
beamcast/: CMakeLists.txt  bvh.cpp  bvh.hpp  camera.hpp  data.hpp  intersectable.hpp  log.hpp  main.cpp  materials.cpp  materials.hpp  mesh.cpp  mesh.hpp  renderer.hpp  sample.hpp  scene.cpp  scene.hpp  textures.hpp  threading.hpp
img/: export.hpp  image.cpp  image.hpp
json/: CMakeLists.txt  json.cpp  json.hpp  test.cpp
myglm/: CMakeLists.txt  mat.h  myglm.h  test.cpp  vec.h  vec2.h  vec3.h  vec4.h  vec_basic.inl  views.h
project_scene/shaderball/: license.txt  scene.gltf
